--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "PRABATH-MD (2.1.2)",
-  "description": "PRABATH-MD has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
-  "logo": "https://telegra.ph/file/ad25b2227fa2a1a01b707.jpg",
+  "name": "Ｆｉｌｍ Ｆｅｅｄ 🎞️ 🎥",
+  "description": "Ｆｉｌｍ Ｆｅｅｄ 🎞️ 🎥",
+  "logo": "https://ibb.co/93HHH1S3",
   "keywords": ["nodejs", "bot", "whatsapp bot", "multi device", "prabath-md"],
   "success_url": "/",
 
